--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -8,4 +8,5 @@ jobs:
         - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - go run go-server/app/server.go
+        - go run /golang/helloworld/dubbo/go-server/app/server.go
+
