--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -8,5 +8,7 @@ jobs:
         - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - go run helloworld/dubbo/go-server/app/server.go
+        - cd helloworld/dubbo/go-server/
+        - assembly/linux/dev.sh
+        - target/*/*/bin/load.sh start
 
