--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -8,7 +8,12 @@ jobs:
         - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - cd helloworld/dubbo/go-server/
+        - cd ~/golang/helloworld/dubbo/go-server/
         - assembly/linux/dev.sh
-        - target/*/*/bin/load.sh start
+        - cd target/*/*/
+        - nohup bin/load.sh start > a.out&
+        - cd ~/golang/helloworld/dubbo/go-client/
+        - assembly/linux/dev.sh
+        - cd target/*/*/
+        - bin/load.sh start
 
