--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -8,11 +8,12 @@ jobs:
         - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - cd ~/golang/helloworld/dubbo/go-server/
+        - PROJECT_HOME="${pwd}"
+        - cd ${PROJECT_HOME}golang/helloworld/dubbo/go-server/
         - assembly/linux/dev.sh
         - cd target/*/*/
         - nohup bin/load.sh start > a.out&
-        - cd ~/golang/helloworld/dubbo/go-client/
+        - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
         - assembly/linux/dev.sh
         - cd target/*/*/
         - bin/load.sh start
