--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -8,7 +8,7 @@ jobs:
         - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - PROJECT_HOME="${pwd}"
+        - PROJECT_HOME=$(pwd)
         - cd ${PROJECT_HOME}golang/helloworld/dubbo/go-server/
         - assembly/linux/dev.sh
         - cd target/*/*/
