--- a/golang/helloworld/dubbo/go-client/assembly/common/app.properties
+++ b/golang/helloworld/dubbo/go-client/assembly/common/app.properties
@@ -15,9 +15,9 @@
 # limitations under the License.
 
 
-export TARGET_EXEC_NAME="user_info_client"
+TARGET_EXEC_NAME="user_info_client"
 # BUILD_PACKAGE="dubbogo-examples/user-info/client/app"
-export BUILD_PACKAGE="app"
+BUILD_PACKAGE="app"
 
-export TARGET_CONF_FILE="conf/client.yml"
-export TARGET_LOG_CONF_FILE="conf/log.yml"
+TARGET_CONF_FILE="conf/client.yml"
+TARGET_LOG_CONF_FILE="conf/log.yml"
