--- a/golang/direct/dubbo/.travis.yml
+++ b/golang/direct/dubbo/.travis.yml
@@ -12,9 +12,10 @@ jobs:
         - cd ${PROJECT_HOME}/golang/direct/dubbo/go-server/
         - assembly/linux/dev.sh
         - cd target/*/
+        - ls -l
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/golang/direct/dubbo/go-client/
         - assembly/linux/dev.sh
-        - tree target
-        - cd target/*/
+        - cd target/*/*/
+        - ls -l
         - bin/load.sh start
