--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -3,18 +3,26 @@ stages:
 jobs:
   include:
     - stage: Test hello world
-      go: 1.13
+      name: "prepare env"
       script:
-        - echo "Test Hello World dubbo ..."
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
+    - stage: Test hello world
+      name: "Start server"
+      script:
         - PROJECT_HOME=$(pwd)
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
+        - rm -rf assembly
+        - wget $SERVER_TESTING
         - assembly/linux/dev.sh
         - cd target/*/*/
         - nohup bin/load.sh start > a.out&
+    - stage: Test hello world
+      name: "Start client"
+      script:
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
+        - rm -rf assembly
+        - wget CLIENT_TESTING
         - assembly/linux/dev.sh
         - cd target/*/*/
         - bin/load.sh start
-
