--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -7,22 +7,16 @@ jobs:
       script:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
+        - PROJECT_HOME=$(pwd)
     - stage: Test hello world
       name: "Start server"
       script:
-        - PROJECT_HOME=$(pwd)
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
-        - rm -rf assembly
-        - wget https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-server/assembly.zip
-        - assembly/linux/dev.sh
-        - cd target/*/*/
+        - ./integration_test.sh go-server
         - nohup bin/load.sh start > a.out&
     - stage: Test hello world
       name: "Start client"
       script:
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
-        - rm -rf assembly
-        - wget https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-client/assembly.zip
-        - assembly/linux/dev.sh
-        - cd target/*/*/
+        - ./integration_test.sh go-client
         - bin/load.sh start
