--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -7,16 +7,15 @@ jobs:
       script:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - PROJECT_HOME=$(pwd)
     - stage: Test hello world
       name: "Start server"
       script:
-        - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
+        - cd golang/helloworld/dubbo/go-server/
         - ./integration_test.sh go-server
         - nohup bin/load.sh start > a.out&
     - stage: Test hello world
       name: "Start client"
       script:
-        - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
+        - cd golang/helloworld/dubbo/go-client/
         - ./integration_test.sh go-client
         - bin/load.sh start
