--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -5,17 +5,14 @@ jobs:
     - stage: Test hello world
       name: "prepare env"
       script:
+        - PROJECT_HOME=$(pwd)
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-    - stage: Test hello world
-      name: "Start server"
-      script:
-        - cd golang/helloworld/dubbo/go-server/
+        - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
+        - chmod u+x integration_test.sh
         - ./integration_test.sh go-server
         - nohup bin/load.sh start > a.out&
-    - stage: Test hello world
-      name: "Start client"
-      script:
-        - cd golang/helloworld/dubbo/go-client/
+        - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
+        - chmod u+x integration_test.sh
         - ./integration_test.sh go-client
         - bin/load.sh start
