--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,10 +9,10 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
-        - chmod -R u+x *
+        - chmod -R 777 *
         - ./integration_test.sh go-server
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
-        - chmod -R u+x *
+        - chmod -R 777 *
         - ./integration_test.sh go-client
         - bin/load.sh start
