--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,12 +9,12 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
-        - sudo chomd a+x -R *
+        - sudo chmod a+x -R *
         - ls -al
         - ./integration_test.sh go-server
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
-        - sudo chomd a+x -R *
+        - sudo chmod a+x -R *
         - ls -al
         - ./integration_test.sh go-client
         - bin/load.sh start
