--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -10,15 +10,15 @@ jobs:
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
         - rm -rf assembly
-        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-server/assembly.zip"
-        - unzip assembly.zip
+        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-server/assembly.tar"
+        - tar -xvf assembly.tar
         - assembly/linux/dev.sh
         - cd target/*/*/
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
         - rm -rf assembly
-        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-client/assembly.zip"
-        - unzip assembly.zip
+        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-client/assembly.tar"
+        - tar -xvf assembly.tar
         - assembly/linux/dev.sh
         - cd target/*/*/
         - bin/load.sh start
