--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,16 +9,14 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-server/
-#        - rm -rf assembly
-#        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-server/assembly.tar"
-#        - tar -xvf assembly.tar
+        - rm -rf assembly
+        - cp -r ${PROJECT_HOME}/.integration/testing/go-server/assembly .
         - assembly/linux/dev.sh
         - cd target/*/*/
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/golang/helloworld/dubbo/go-client/
-#        - rm -rf assembly
-#        - wget "https://github.com/dubbogo/resources/raw/master/tools/integration/testing/go-client/assembly.tar"
-#        - tar -xvf assembly.tar
+        - rm -rf assembly
+        - cp -r ${PROJECT_HOME}/.integration/testing/go-client/assembly .
         - assembly/linux/dev.sh
         - cd target/*/*/
         - bin/load.sh start
