--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,14 +9,8 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-server/
-        - rm -rf assembly
-        - cp -r ${PROJECT_HOME}/.integration/testing/go-server/assembly .
-        - assembly/linux/dev.sh
-        - cd target/*/*/
+        - ./integration_testing.sh ${PROJECT_HOME} go-server
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-client/
-        - rm -rf assembly
-        - cp -r ${PROJECT_HOME}/.integration/testing/go-client/assembly .
-        - assembly/linux/dev.sh
-        - cd target/*/*/
+        - ./integration_testing.sh ${PROJECT_HOME} go-client
         - bin/load.sh start
