--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,8 +9,10 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-server/
-        - - ./integration_testing.sh ${PROJECT_HOME} go-client
-        - nohup target/*/*/bin/load.sh start > a.out&
+        - ./integration_testing.sh ${PROJECT_HOME} go-client
+        - cd target/*/*/
+        - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-client/
         - ./integration_testing.sh ${PROJECT_HOME} go-client
-        - target/*/*/bin/load.sh start
+        - cd target/*/*/
+        - bin/load.sh start
