--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -9,7 +9,7 @@ jobs:
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-server/
-        - ./integration_testing.sh ${PROJECT_HOME} go-client
+        - ./integration_testing.sh ${PROJECT_HOME} go-server
         - cd target/*/*/
         - nohup bin/load.sh start > a.out&
         - cd ${PROJECT_HOME}/helloworld/dubbo/go-client/
