--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -6,13 +6,11 @@ jobs:
       name: "prepare env"
       script:
         - PROJECT_HOME=$(pwd)/golang
+        - GO_SERVER=go-server
+        - GO_CLIENT=go-client
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - cd ${PROJECT_HOME}/helloworld/dubbo/go-server/
-        - ./integration_testing.sh ${PROJECT_HOME} go-server
-        - cd target/*/*/
-        - nohup bin/load.sh start > a.out&
-        - cd ${PROJECT_HOME}/helloworld/dubbo/go-client/
-        - ./integration_testing.sh ${PROJECT_HOME} go-client
-        - cd target/*/*/
-        - bin/load.sh start
+        - cd ${PROJECT_HOME}/helloworld/dubbo/${GO_SERVER}/
+        - ./integration_testing.sh ${PROJECT_HOME} ${GO_SERVER} true
+        - cd ${PROJECT_HOME}/helloworld/dubbo/${GO_CLIENT}/
+        - ./integration_testing.sh ${PROJECT_HOME} ${GO_CLIENT}
