--- a/golang/helloworld/dubbo/.travis.yml
+++ b/golang/helloworld/dubbo/.travis.yml
@@ -6,11 +6,12 @@ jobs:
       name: "prepare env"
       script:
         - PROJECT_HOME=$(pwd)/golang
-        - GO_SERVER=go-server
-        - GO_CLIENT=go-client
+        - CASE_HOME=/helloworld/dubbo
+        - GO_SERVER=/go-server
+        - GO_CLIENT=/go-client
         - docker run -d --network host zookeeper
         - echo "zookeeper listen in [:]2181"
-        - cd ${PROJECT_HOME}/helloworld/dubbo/${GO_SERVER}/
+        - cd ${PROJECT_HOME}${CASE_HOME}${GO_SERVER}
         - ./integration_testing.sh ${PROJECT_HOME} ${GO_SERVER} true
-        - cd ${PROJECT_HOME}/helloworld/dubbo/${GO_CLIENT}/
+        - cd ${PROJECT_HOME}${CASE_HOME}${GO_CLIENT}
         - ./integration_testing.sh ${PROJECT_HOME} ${GO_CLIENT}
