--- a/golang/.travis.yml
+++ b/golang/.travis.yml
@@ -7,4 +7,4 @@ env:
   - GO111MODULE=on
 import:
   - golang/helloworld/dubbo/.travis.yml
-#  - golang/direct/dubbo/.travis.yml
+  - golang/direct/dubbo/.travis.yml
