--- a/golang/registry/nacos/dubbo/java-server/src/main/resources/dubbo.properties
+++ b/golang/registry/nacos/dubbo/java-server/src/main/resources/dubbo.properties
@@ -1,3 +1,5 @@
+spring.application.name=user-service
+
 ### dubbo注册中心配置 ##
 dubbo.container = log4j,spring
 dubbo.application.name = user-info-server
